# udemy-haskell-course

./: .gitignore  Composition.hs  Filter.hs  Reduction.hs  instructions.txt
hello-world/: LICENSE  hello-world.cabal
