name:                hello-world
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattany/hello-world#readme
license:             BSD3
license-file:        LICENSE
author:              mattan yeroushalmi
maintainer:          mattany@gmail.com
copyright:           mattan yeroushalmi
category:            default
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-world
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
